resolved issue by farhan

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="FunCenter">Fun Center</string>
     <string name="Alerts">Alerts</string>
     <string name="Classwork">Classwork</string>
-    <string name="Communication">Communication</string>
+    <string name="Communication">Chat</string>
     <string name="Holiday">Holiday</string>
     <string name="Logout">Logout</string>
 
